# Non-Obtuse-Triangulation-PSLG

./: README.md  Report on Triangulation Results Based on Provided Inputs and Methods.docx
CGAL-Project/: 2η Εργασία.docx  CMakeLists.txt  cleanup.sh  run.sh  visualRun.sh
CGAL-Project/CodeFiles/: main.cpp  main_visualization.cpp  triangulation_utils.cpp  visualization.cpp
CGAL-Project/HeaderFiles/: triangulation_utils.h  triangulation_utils.hpp  visualization.h
CGAL-Project/data/: input.json  input_aco.json  input_aco_2.json  input_aco_3.json  input_hubrid.json  input_hubrid_2.json  input_hubrid_3.json  input_local.json  input_local_2.json  input_local_3.json  input_simulated_annealing.json  output.json  output_aco.json  output_hybrid.json  output_local.json
CGAL-Project/data/convexClosedConstraints/: input_closed_constraints_aco.json  input_closed_constraints_local.json  input_convex_closed_constraints_hybrid.json  input_convex_closed_constraints_sim_an.json  output_closed_constraints_local.json  output_convex_closed_constraints_aco.json  output_convex_closed_constraints_sim_an.json
CGAL-Project/data/convexNoConstraints/: input_convex_no_constraints_aco.json  input_convex_no_constraints_hybrid.json  input_convex_no_constraints_local.json  input_convex_no_constraints_sim_an.json  output_convex_no_constraints_aco.json  output_convex_no_constraints_hybrid.json  output_convex_no_constraints_local.json  output_convex_no_constraints_sim_an.json
CGAL-Project/data/convexOpenConstraints/: input_convex_open_constraints_aco.json  input_convex_open_constraints_hybrid.json  input_convex_open_constraints_local.json  input_convex_open_constraints_sim_an.json  output_convex_open_constraints_aco.json  output_convex_open_constraints_hybrid.json  output_convex_open_constraints_local.json  output_convex_open_constraints_sim_an.json
CGAL-Project/data/irregularNonConvex/: input_irregular_non_convex_aco.json  input_irregular_non_convex_hybrid.json  input_irregular_non_convex_local.json  input_irregular_non_convex_sim_an.json  output_irregular_non_convex_aco.json  output_irregular_non_convex_hybrid.json  output_irregular_non_convex_local.json  output_irregular_non_convex_sim_an.json
CGAL-Project/data/nonConvexParallel/: input_non_convex_parallel_aco.json  input_non_convex_parallel_hybrid.json  input_non_convex_parallel_local.json  input_non_convex_parallel_sim_an.json  output_non_convex_parallel_aco.json  output_non_convex_parallel_hybrid.json  output_non_convex_parallel_local.json  output_non_convex_parallel_sim_an.json
cgal_project/: CMakeLists.txt  main.cpp  run.sh  triangulation_utils.cpp  triangulation_utils.h
cgal_project/built/: CMakeCache.txt  Makefile  cmake_install.cmake  triangulation_program
